[gd_scene load_steps=2 format=3 uid="uid://bqxe4r8nwvjsd"]

[ext_resource type="Script" path="res://scripts/ui/event_popup.gd" id="1_event"]

[node name="EventPopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_event")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Event Title"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="DescriptionLabel" type="RichTextLabel" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
bbcode_enabled = true
text = "Event description goes here..."
fit_content = true

[node name="ChoicesContainer" type="VBoxContainer" parent="Panel/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ConsequenceLabel" type="RichTextLabel" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
bbcode_enabled = true
text = "Consequence text..."
fit_content = true

[node name="ContinueButton" type="Button" parent="Panel/VBox"]
layout_mode = 2
text = "Continue"
